0.9.1
   - bug [9659] "DCHarvester sætter forkert mimetype"
   - bug [9346] "Der skal laves et script der kan samle FileHarvester filer til en fil som den ville se ud fra posthuset"
   - bug [9427] "Vi skal have en HarvesterIOException"
   - bug [9500] "Foreslået patch til ptithreads afvisning af format+submitter med manglende jobliste"
   - bug [9497] "xmlutilstest bruger deprecatede metoder"
   - bug [9468] "Har vi behov for equals metoden i Job?"
   - bug [9465] "Ny HarvesterIOException skal håndteres korrekt i testen af DatadockManagerTest.java"
   - bug [9453] "Documentation of parameters in config.txt"
   - bug [9449] "Timing on each plugin call and logging of the result"
