@@ -1,4 +1,5 @@
 0.9.1
+   - bug [9660] "DublinCore får tomme værdier sat fra korrekt InputStream"
    - bug [9659] "DCHarvester sætter forkert mimetype"
    - bug [9346] "Der skal laves et script der kan samle FileHarvester filer til en fil som den ville se ud fra posthuset"
    - bug [9427] "Vi skal have en HarvesterIOException"
